[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ficc-treasury-clearing-liquidity-stress-testing"
version = "0.1.0"
description = "Public-data research framework for FICC-style Treasury-clearing liquidity stress testing and independent model validation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Yousef Nejatbakhsh" }]
dependencies = [
    "duckdb>=1.1",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=17",
    "pydantic>=2.8",
    "PyYAML>=6.0",
    "requests>=2.32",
    "scipy>=1.13",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11",
    "pre-commit>=3.8",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
